# python-project-lvl1

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
isakovairat_brain_games.egg-info/: PKG-INFO  SOURCES.txt
