[tool.poetry]
name = "isakovairat_brain_games"
version = "0.7.1"
description = "Brain games - various of games, where you can train you brain skills on different easy tasks"
license = "MIT"
authors = ["Airat Isakov <airat16353@gmail.com>"]
readme = "README.md"
homepage = "https://test.pypi.org/project/isakovairat-brain-games/"
repository = "https://github.com/isakovairat/python-project-lvl1"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment"
]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

